# SCC

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  assembler.cpp  assembler.h  codegen.cpp  codegen.h  codegen.h.autosave  executor.cpp  executor.h  grammar.h  main.cpp  scc  scc-asm  scc-graphical  scc-qemu
tests/: simple_test.cpp
